Fixed dev time compilation using J9+ producing incorrect bytecode.